--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 	<body>
 		
 		<div id="vue-app">
-			<button v-on:click="error = !error">Toggle error</button>
-			<button v-on:click="success = !success">Toggle success</button>
-			<p v-if="error">Error</p>
-			<p v-else-if="success">Success</p>			
+			<!--bag image -->
+			<div id="trump" v-bind:class="{ sad: ended }"></div>
+			
+			<!--bag health -->
+			<div id="trump-health">
+				<div v-bind:style="{ width: health + '%' }"></div>
+			</div>
+			
+			<!--game controls -->
+			<div id="controls">
+				<button v-on:click="punch" v-show="!ended">Punch</button>
+				<button v-on:click="restart">Restart</button>
+			</div>
+			
 		</div>
 		
 		<script src="app.js"></script>
