--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 	<body>
 		
 		<div id="vue-app-one">
-			<h1>{{title}}</h1>
-			<p>{{greet}}</p>
-		</div>
+			<h2>App one</h2>
+			<greeting></greeting>
+		</div>	
 		<div id="vue-app-two">
-			<h1>{{title}}</h1>			
-			<p>{{greet}}</p>
-			<p><i>{{text}}</i></p>			
-			<button v-on:click="changeTitle">Change title</button>
-		</div>		
+			<h2>App two</h2>
+			<greeting></greeting>
+		</div>			
 		
 		<script src="app.js"></script>
 	</body>
