--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 	</head>
 	<body>
 		
-		<div id="vue-app-one">
-			<h2>App one</h2>
-			<greeting></greeting>
-		</div>	
-		<div id="vue-app-two">
-			<h2>App two</h2>
-			<greeting></greeting>
+		<div id="vue-app">
+			<h2>Refs</h2>
+			<input type="text" ref="input" />
+			<button v-on:click="readRefs">Save</button>
+			<p>Your fav food: {{output}}</p>
+			<div ref="test">hello</div>
 		</div>			
 		
 		<script src="app.js"></script>
